# Hynous

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: README.md  default.yaml
dashboard/: README.md  rxconfig.py
data-layer/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
deploy/: README.md  hynous-daemon.service  hynous.service  setup.sh
docs/: README.md  integration.md  temporary-advisor-document.md
nous-server/: .gitignore  README.md  pnpm-lock.yaml
revisions/: README.md  revision-exploration.md
satellite/: README.md  __init__.py  condition_alerts.py  conditions.py  config.py  entry_score.py  features.py  inference.py  labeler.py  monitor.py  normalize.py  safety.py  schema.py  signal_evaluator.py  store.py  tick_features.py  tick_inference.py  weight_updater.py
scripts/: README.md  artemis_sync.sh  backfill.py  backfill_candles.py  backup_satellite.sh  calibrate_composite_score.py  diagnose_direction_inference.py  monte_carlo.html  monte_carlo_server.py  retrain_direction_model.py  retrain_direction_v3_snapshots.py  run_daemon.py
tests/: README.md  conftest.py
v2-planning/: 00-master-plan.md  01-pre-implementation-reading.md  02-testing-standards.md  03-phase-0-branch-and-environment.md  04-phase-1-data-capture.md  05-phase-2-journal-module.md  06-phase-3-analysis-agent.md  07-phase-4-tier1-deletions.md  08-phase-5-mechanical-entry.md  09-phase-6-consolidation-and-patterns.md  10-phase-7-dashboard-rework.md  11-phase-8-quantitative.md  12-kronos-shadow-integration.md  (+9 more)
(+414 files in other folders)
