[project]
name = "hynous"
version = "0.1.0"
description = "Personal crypto intelligence system with autonomous LLM trading agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "David" }
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # LLM
    "litellm>=1.0.0",
    "anthropic>=0.40.0",  # Used by litellm for Anthropic provider

    # Dashboard
    "reflex>=0.6.0",

    # Database
    "aiosqlite>=0.19.0",

    # Data
    "hyperliquid-python-sdk>=0.1.0",

    # Async
    "aiohttp>=3.9.0",

    # ML Satellite (SPEC-02 through SPEC-07)
    "xgboost>=2.0.0",
    "shap>=0.42.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "boto3>=1.28.0",       # Artemis S3 pipeline
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hynous"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled separately

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
